--- a/off-limits/testing.html
+++ b/off-limits/testing.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
-    <title>Password Protected Page</title>
+    <title>Testing</title>
     <style>
         html, body {
             margin: 0;
