--- a/matrix.html
+++ b/matrix.html
@@ -1,1 +1,3 @@
-<iframe src="https://dynocc.tk/bored" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
+<iframe src="https://dynocc.tk/bored" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    Your browser doesn't like our code. Try another.
+</iframe>
